# azure-portal-token-provider

./: .flake8  LICENSE  README.md  pyproject.toml
src/: __init__.py  app.py
src/auth/: api_key.py
src/config/: logger.py  settings.py
src/daemons/: azp_token_syncer.py  healthcheck.py  manager.py
