[project]
name = "azure-portal-token-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "camoufox[geoip]==0.4.11",
  "playwright<1.61",
  "fastapi-cloud-logging>=1.1.0",
  "google-cloud-logging>=3.15.0",
  "gunicorn>=26.0.0",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.3.3",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "python-dotenv>=1.2.2",
  "tenacity>=9.1.4",
  "toolz>=1.1.0",
  "uvicorn[standard]>=0.51.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.vscode
)/
'''

[tool.isort]
profile = "black"

[dependency-groups]
dev = ["black>=26.5.1", "flake8>=7.3.0", "isort>=8.0.1"]
