[project]
name = "azure-portal-token-provider"
version = "0.1.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
  "fastapi-cloud-logging>=1.1.0",
  "google-cloud-logging>=3.15.0",
  "gunicorn>=26.0.0",
  "httpx>=0.28.1",
  "playwright>=1.61.0",
  "psycopg[binary]>=3.3.3",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "tenacity>=9.1.4",
  "toolz>=1.1.0",
  "uvicorn[standard]>=0.51.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.vscode
)/
'''

[tool.isort]
profile = "black"

[dependency-groups]
dev = ["black>=26.5.1", "flake8>=7.3.0", "isort>=8.0.1"]
